Swagger update documetation , exceltests, configuration docker and some changes
